--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
+    "lucide-react": "^0.555.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
