--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "test": "vitest"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-globe.gl": "^2.37.0",
+    "react-use-measure": "^2.1.7",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
