--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "lenis": "^1.3.14",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-globe.gl": "^2.37.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.4.0",
@@ -30,20 +30,20 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "@types/sharp": "^0.31.1",
     "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "jsdom": "^27.2.0",
     "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.13"
   }
 }
