--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
     "lucide-react": "^0.555.0",
@@ -23,6 +25,8 @@
     "react-dom": "^19.2.1",
     "react-globe.gl": "^2.37.0",
     "react-use-measure": "^2.1.7",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
