--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
     "next": "^16.0.7",
+    "nodemailer": "^7.0.11",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-globe.gl": "^2.37.0",
     "react-use-measure": "^2.1.7",
     "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
@@ -35,6 +38,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "@types/sharp": "^0.31.1",
